src/app/game/cell/cell.component.scss
button {
  width: 100%;
  height: 100%;
  background: white;
  padding: 0;
  border: 0;
  margin: 0;
  font-size: x-large;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;

  .hover {
    display: none;
    opacity: 0.3;
  }

  &:disabled {
    opacity: 1;
    cursor: default;
  }

  &:hover,
  &:focus {
    .hover {
      display: inherit;
      animation: fadeIn 1s ease;
    }
  }

  &.highlight.x > img {
    animation: spinX 1s linear infinite;
  }

  &.highlight.o > img {
    animation: spinO 1s linear infinite;
  }

  > img {
    width: 100%;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
}

@keyframes spinO {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateY(360deg);
  }
}

@keyframes spinX {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

